# sricore

./: CMakeLists.txt  LICENSE  README.md  setup.py
.github/workflows/: build.yml
bindings/: python_bindings.cpp
include/srichakra/: complexity.hpp  constants.hpp  engine.hpp  schema.hpp  state_machine.hpp  types.hpp
src/: complexity.cpp  engine.cpp  main.cpp
tests/: test_performance.cpp  test_state_machine.cpp
